recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:4: error: not enough arguments for method avance: (x$1: Double)Unit.
Unspecified value parameter x$1.
	avance()
              ^Spiral:7: error: Unit does not take parameters
else spiral(steps-1,90,length+increment,increment){
                                                  ^